lw-is-website-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lw-is-service
  namespace: lw-is

spec:
  # type: LoadBalancer
  selector:
    app: lw-is
    tier: front
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
